// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Button disabled 1`] = `
<DocumentFragment>
  <button
    disabled=""
  >
    Start Game
  </button>
</DocumentFragment>
`;

exports[`Button component Button initalized 1`] = `
<DocumentFragment>
  <button>
    Start Game
  </button>
</DocumentFragment>
`;
